--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -46,6 +46,7 @@ $menu = rofi -show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
+exec-once = dbus-update-activation-environment --systemd HYPRLAND_INSTANCE_SIGNATURE
 exec-once = waybar
 exec-once = hyprpaper
 exec-once = sleep 1 && ~/.config/hypr/scripts/wallpaper.sh
@@ -57,6 +58,7 @@ exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
 exec-once = hypridle
 exec-once = nm-applet --indicator
 exec-once = cliphist wipe
+exec-once = hyprshade auto
 
 #############################
 ### ENVIRONMENT VARIABLES ###
