image fix + backup remove

--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -38,7 +38,7 @@ animations {
 
 background {
     #monitor =
-    path = ~/Pictures/Wallpapers/lock/bocchi.png
+    path = ~/.config/hypr/Wallpapers/lock/bocchi.png
     blur_passes = 3
 }
 
