--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/Pictures/Wallpapers/gamble.png
-wallpaper = , ~/Pictures/Wallpapers/gamble.png
+preload = ~/.config/hypr/Wallpapers/gamble.png
+wallpaper = , ~/.config/hypr/Wallpapers/gamble.png
